Resize Feature Link buttons to avoid text overflow

--- a/style/board-medium.css
+++ b/style/board-medium.css
@@ -28,6 +28,10 @@ table {
     flex: 1;
 }
 
+.featureButton h3 {
+    font-size: 1.75rem;
+}
+
 #featureLinks {
     display: flex;
     flex-direction: row;
